# SDL2-sort

./: .gitignore  CMakeLists.txt  README.md  compile_wasm.sh  run.sh  server.py  shell.html
.github/workflows/: deploy-s3.yml
include/: diagram.h  engine.h  helper.h  histogram.h  screen.h  sorter.h
include/diagram/: diagram.h  histogram.h  line.h
src/: colors.h  engine.cc  engine.h  event.h  helper.h  histogram.cc  main.cc  main.cpp  observer.cc  observer.h  options.cc  options.h  screen.cc  screen.h  sorter.cc  sorter.h
src/algorithm/: bubble_sort.cc  bubble_sort.h  heap_sort.cc  heap_sort.h  insertion_sort.cc  insertion_sort.h  merge_sort.cc  merge_sort.h  quick_sort.cc  quick_sort.h  selection_sort.cc  selection_sort.h
src/diagram/: diagram.h  diagram_factory.h  histogram.cc  histogram.h  histogram_factory.cc  histogram_factory.h  line.cc  line.h  scatter_plot.cc  scatter_plot.h  scatter_plot_factory.cc  scatter_plot_factory.h
